# PortfolioPilot-AI

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: market_agent.py  portfolio_agent.py  risk_agent.py  technical_agent.py
config/: settings.py
core/: graph_builder.py  graph_state.py  llm_provider.py
tools/: market_tools.py  risk_tools.py  technical_tools.py  zerodha_client.py  zerodha_tools.py
